generate js with gulp

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
     <!-- Raleway Google font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700">
-    <link rel="stylesheet" href="public/css/main.css">
+    <link rel="stylesheet" href="public/css/main.min.css">
 <body>
 
     <div class="container-fluid">
@@ -61,11 +61,10 @@
 </div>
 
 <!-- End Footer Section -->
-<script src="src/js/jquery-1.12.1.min.js"></script>
-<script src="src/js/lastfm.api.cache.js"></script>
-<script src="src/js/lastfm.api.js"></script>
-<script src="src/js/lastfm.api.md5.js"></script>
-<script src="config.js"></script>
-<script src="src/js/scripts.js"></script>
+<script src="public/js/lastfm.api.cache.js"></script>
+<script src="public/js/lastfm.api.js"></script>
+<script src="public/js/lastfm.api.md5.js"></script>
+<script src="public/js/scripts.js"></script>
 
-</body></html>
+</body>
+</html>
